// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder="3"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder="7"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="4"
      id="verification-code-4"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="5"
      id="verification-code-5"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle error 1`] = `
<DocumentFragment>
  .cache-vbeqix-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #dd3252;
  font-size: 24px;
  color: #dd3252;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-vbeqix-StyledInput-VerificationCode:hover,
.cache-vbeqix-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-vbeqix-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-vbeqix-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-vbeqix-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-vbeqix-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-vbeqix-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-vbeqix-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="true"
      class="cache-vbeqix-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="true"
      class="cache-vbeqix-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      class="cache-vbeqix-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      class="cache-vbeqix-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste when type is not number 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      placeholder=""
      type="text"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      placeholder=""
      type="text"
      value="h"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      placeholder=""
      type="text"
      value="2"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      placeholder=""
      type="text"
      value="3"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="4"
      id="verification-code-4"
      placeholder=""
      type="text"
      value="a"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="5"
      id="verification-code-5"
      placeholder=""
      type="text"
      value="*"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .cache-uxqmnp-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d4dae7;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.cache-uxqmnp-StyledInput-VerificationCode:hover,
.cache-uxqmnp-StyledInput-VerificationCode:focus {
  border-color: #4f0599;
}

.cache-uxqmnp-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-uxqmnp-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.cache-uxqmnp-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::-moz-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-uxqmnp-StyledInput-VerificationCode::placeholder {
  color: #b2b6c3;
}

<div>
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="0"
      id="verification-code-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="1"
      id="verification-code-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="2"
      id="verification-code-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      class="cache-uxqmnp-StyledInput-VerificationCode e1odpyad0"
      data-id="3"
      id="verification-code-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
  </div>
</DocumentFragment>
`;
